note

this is first txt I input through emacs.exciting.
2016-11-22 07:40
https://www.safaribooksonline.com/library/view/python-programming-language/9780134217314/PYMC_01_03.html
很多时候运行python程序,需要类似这样
python3 nextbus.py
如果不想加前面的python3.可以这样
在nextbus.py的最上面加入
#! /usr/bin/env python3
以告诉系统这是一个python脚本,需要python3来执行
然后记得给这个nextbus.py加上可执行权限,即
chmod +x nextbus.py

在python程序中格式化或者说在字符串中动态取值可以这样
route = 100
stopid = 30
str = 'http://www.baidu.com/text.jsp?route={}&stop={}'.format(route,stopid)
这样就能把变量route和stopid的值替换到字符串str中

如果想要读取命令行的参数,需要导入一个module
import sys
在这个sys中有一个叫argv的数组封装了命令行传递的参数.
Caution index form one
argv[1]为第一个参数
如:python3 nextbus.py 22 1413
在代码中可以这样去获取
#22
first = sys.argv[1]
#1413
second = sys.argv[2]

也可以判断sys.argv的长度.通过
if len(sys.argv) != 3 :
    raise System.Exit('Something you wanna say)

注意这里的System.Exit()是退出程序的和Java的System.exit()差不多

在执行python程序的时候有一个很有用的选项 -i
   如: python3 -i nextbus.py 22 14787
   这会使你进入python的交互环境.你可以在里面打印出每一个变量的值
   直接输入变量名回车即可.

在编写python代码的时候,可以通过如下方式打断点
在代码中插入snipet
import pdb; pdb.set_trace() #launch debugger就可以相当于打断点

在使用-i选项进入交互环境的时候,可以通过如下方式launch debugger
import pdb
这样以后就能launch debugger
and then you input
pdb.pm()
and you also can do do poking around like print sth
print(some)

or you can get the program list just type  list

or you can single-step through the code just type  s



2016-11-23 07:35
    2.1 Project: Mortgage Calculator
    https://www.safaribooksonline.com/library/view/python-programming-language/9780134217314/PYMC_02_01.html

in Python we denote a statement body through the intent like

    while principle > 0 :
        month += 1
        #do sth
    
    while age > 28
        print('old man')

    different intention means different statement

    and the if eles control flow works like this

    while principle > 0
        month += 1
        if month >= extra_payment_start_month and month <= extra_payment_end_month :
            total_payment = payment + extra_payment
        else :
            total_payment = payment
        interest = principle * (rate / 12)

that intersting.
note that everything above belong a while loop
because they are  all belong one intention
and note the control flow, it must ends with a : marker
like while xxx :   if xxx :   else :
and in python there is a 'and' like Java's &&

if you type python to enter the interactive interpreter
and just type 1 + 2
the output will be 3
and next you want use the result last calculate 
there is a _ ,which means the last calculate result
then you can type like
_ + 5
and the result will be 8

may be the output like this
------------------------------------------------------------
~/.vim/bundle(branch:th*) » python                                                                                                   
Python 2.7.12 (default, Oct 11 2016, 05:16:02)
[GCC 4.2.1 Compatible Apple LLVM 7.0.2 (clang-700.1.81)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 1 + 2
3
>>> _ + 5
8
>>> quit()
------------------------------------------------------------

2016-11-24 07:33
    2.2 Project formatted Output and File I/0
https://www.safaribooksonline.com/library/view/python-programming-language/9780134217314/PYMC_02_02.html
    about print()function output formatted,you can do like this
    name = 'IBM'
    shares = 100
    price = 23.2
    print('%10s %10d %10.2f' % (name,shares,price))
    or maybe you can do like
    print('{:>10s} {:>10d} {:>10.2f}'.format(name,shares,price))
    or maybe left align
    print('{:<10s} {:<10d} {:<10.2f}'.format(name,shares,price))

>>> name = 'IBM'
>>> shares = 100
>>> price = 23.2
>>> print('%10s %10d %10.2f' % (name,shares,price))
       IBM        100      23.20
>>> print('{:>10s} {:>10d} {:>10.2f}'.format(name,shares,price))
       IBM        100      23.20
>>> print('{:<10s} {:<10d} {:<10.2f}'.format(name,shares,price))
       IBM        100        23.20

# how to write the output to a file
name = 'IBM'
shares = 100
price = 23.2

#open a file named schedules for writing
out = open('schedules','w')
print('{:<10s} {:<10d} {:<10.2f}'.format(name,shares,price),file=out)
#after your writing you should close it
out.close()

2016-11-25 07:50
    3.1 File and String Basic
https://www.safaribooksonline.com/library/view/python-programming-language/9780134217314/PYMC_03_01.html


n 3.5.2 (default, Oct 11 2016, 05:00:16) 
[GCC 4.2.1 Compatible Apple LLVM 7.0.2 (clang-700.1.81)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> f = open('mytest.csv','r')
>>> f
<_io.TextIOWrapper name='mytest.csv' mode='r' encoding='UTF-8'>
>>> data = f.read()
>>> data
'"AA"\t"6/11/07"\t100\t    32.20\n"IBM"\t"5/13/07"\t50      91.10\n"CAT"\t"9/23/06"\t150\t    83.44\n"MSFT"\t"5/17/07"\t200\t    51.23\n"GE"\t"2/1/06"\t95\t    40.37\n"MSFT"\t"10/31/06"\t50\t    65.10\n"IBM"\t"7/9/06"\t100 \t70.44\n'
>>> print(data)
"AA"    "6/11/07"   100     32.20
"IBM"   "5/13/07"   50      91.10
"CAT"   "9/23/06"   150     83.44
"MSFT"  "5/17/07"   200     51.23
"GE"    "2/1/06"    95      40.37
"MSFT"  "10/31/06"  50      65.10
"IBM"   "7/9/06"    100     70.44

>>> f.close()
>>> f  = open('mytest.csv','r')
>>> for line in f:
...     print(line)
... 
"AA"    "6/11/07"   100     32.20

"IBM"   "5/13/07"   50      91.10

"CAT"   "9/23/06"   150     83.44

"MSFT"  "5/17/07"   200     51.23

"GE"    "2/1/06"    95      40.37

"MSFT"  "10/31/06"  50      65.10

"IBM"   "7/9/06"    100     70.44

>>> line
'"IBM"\t"7/9/06"\t100 \t70.44\n'
>>> f.close()
>>> with open('mytest.csv','r') as f:
...     data = f.read()
... data
  File "<stdin>", line 3
      data
             ^
SyntaxError: invalid syntax
>>>     data
 File "<stdin>", line 1
      data
          ^
IndentationError: unexpected indent
>>> print(data)
"AA"    "6/11/07"   100     32.20
"IBM"   "5/13/07"   50      91.10
"CAT"   "9/23/06"   150     83.44
"MSFT"  "5/17/07"   200     51.23
"GE"    "2/1/06"    95      40.37
"MSFT"  "10/31/06"  50      65.10
"IBM"   "7/9/06"    100     70.44

>>> 
>>> line
'"IBM"\t"7/9/06"\t100 \t70.44\n'
>>> line=line.strip()
>>> 
>>> a = 'hello world'
>>> a
'hello world'
>>> b = "hello world"
>>> b
'hello world'
>>> a[0]
'h'
>>> a[-1]
'd'
>>> a[-3]
'r'
>>> a[0:5]
'hello'
>>> a[:5]
'hello'
>>> a[-5:]
'world'
>>> line
'"IBM"\t"7/9/06"\t100 \t70.44'
>>> line[1:4]
'IBM'
>>> len(line)
25
>>> len(a)
11
>>> c = 'hello' + 'world'
>>> c+b
'helloworldhello world'
>>> line
'"IBM"\t"7/9/06"\t100 \t70.44'
>>> 

>>> line.strip()
'"IBM"\t"7/9/06"\t100 \t70.44'
>>> line = line.strip()
>>> line
'"IBM"\t"7/9/06"\t100 \t70.44'
>>> line.replace('"','-')
'-IBM-\t-7/9/06-\t100 \t70.44'
>>> parts=line.split('\t')
>>> parts
['"IBM"', '"7/9/06"', '100 ', '70.44']
>>> parts[0]
'"IBM"'
>>> parts[1]
'"7/9/06"'
>>> parts[0] = parts[0].strip('"')
>>> parts[0]
'IBM'
>>> parts[2] * parts[3]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  TypeError: can't multiply sequence by non-int of type 'str'
  >>> parts[2]=int(parts[2])
  >>> parts[3]=float(parts[3])
  >>> parts
  ['IBM', '"7/9/06"', 100, 70.44]
  >>> mul=parts[2] * parts[3]
  >>> mul
  7044.0
  >>> 





































